instagram clone done

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="bigger-div">
+  <div class="outer-div">
+    <figure>
+      <img src="images/phones.png" alt="a picture of two mobile devices; one that runs OS and the other, android.">
+    </figure>
 
-  Capture and Share the World's Moments
+    <div class="right-side">
+      <div class="icon-collection">
+        <figure>
+          <img src="images/brand.png" alt="Instagram's logo that represents a polaroid camera, followed by the name 'Instagram'.">
+        </figure>
+        <button>
+          <img src="images/home.png" alt="an icon that represents a home">
+          <p>Log in</p>
+        </button>
+      </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+      <div class="box-on-the-right">
+        <h1>Capture and Share<br>the World's Moments</h1>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+      <div class="download-logos">
+        <img src="../starter-code/images/badge-iphone.png" alt="press here to download the app on the App Store">
+        <img src="images/badge-android.png" alt="press here to get it on GooglePlay" class="img-padding">
+      </div>
+    </div>
+  </div>
+  </div>
+    
+  <footer>
+    <ul>
+    <li><a href="#">About us</a></li>
+    <li><a href="#">Support</a></li>
+    <li><a href="#">Blog</a></li>
+    <li><a href="#">Press</a></li>
+    <li><a href="#">API</a></li>
+    <li><a href="#">Jobs</a></li>
+    <li><a href="#">Privacy</a></li>
+    <li><a href="#">Terms</a></li>
+    <li>&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
+  
 </body>
 </html>
