--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,72 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+<header class="urlImg">
 
-  Capture and Share the World's Moments
+</header>
+<section class="bluebox">
+  <div class="brandLogoLogin">
+    <img  src="images/brand.png" alt="">
+    <button class="loginButton">
+      <img src="images/home.png" alt="Home button for Login"> Login
+    </button>
+  </div>
+</section>
+<section class="whitebox">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="phones">
+    <img src="images/phones.png" alt="">
+  </div>
+  <div class="frame">
+    <div class="info">
+      <h1>Capture and Share the World's Moments</h1>
+      <p>
+        Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life
+        with friends and family.<br><br>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        Take a picture or video, choose a filter to transform its
+        look and feel, then post to Instagram &mdash; it's that easy.
+        You can even share to Facebook, Twitter, Tumblr and more.
+        It's a new way to see the world.<br><br>
 
-  Oh yeah, did we mention it's free?
+        Oh yeah, did we mention it's free?
+      </p>
+      <div class="downloadButtons">
+        <img class="iphoneDownloadButton" src="images/badge-iphone.png" alt="Iphone Download Button">
+        <img src="images/badge-android.png" alt="Android Download Button">
+      </div>
+    </div>
+  </div>
+<!--  <img class="frame" src="images/frame.png" alt="">-->
+</section>
 
-  Download on the App Store
-  Get it on Google Play
+<footer class="footerSection">
+  <ul class="footerTabs">
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li>&copy; 2014 Instagram</li>
+  </ul>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+
+</footer>
+
+
+
+
+
+
+
+
+
 </body>
 </html>
