--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,47 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800&display=swap" rel="stylesheet">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="all-box">
+    <div>
+      <img class="phone-size" src="images/phones.png" alt="two iphones next to each other">
+    </div>
+    <div class="second-box">
+      <div class="navbar">
+        <img src="images/brand.png" alt="instagram logo">
+        <button class="log-in">
+          <img src="images/home.png" alt="icon of a home">
+          <p>Log in</p>
+        </button>
+      </div>
+      <div class="text-and-banners">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share 
+          your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel,
+           then post to Instagram – it's that easy. You can even share to Facebook,
+           Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <img class="left-margin" src="images/badge-iphone.png" alt="iphone badge">
+        <img src="images/badge-android.png" alt="android badge">
+      </div>
+    </div>
+  </div>
+  <footer>
+    <ul>
+      <li>ABOUT US</li>
+      <li>SUPPORT</li>
+      <li>BLOG</li>
+      <li>PRESS</li>
+      <li>API</li>
+      <li>JOBS</li>
+      <li>PRIVACY</li>
+      <li>TERMS</li>
+      <li class="transparent">&copy; 2014 INSTAGRAM</li>
+    </ul>
+  </footer>
 </body>
 </html>
