--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,41 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="blue-container">
+    <div class="blue-content">
+      <img src="images/brand.png" class = "logo" alt="">
+      <button><img src="images/home.png" alt="">Log In</button>
+    </div>
+  </div>
+  <div class="white-contianer">
+    <img src="images/phones.png" class="phone" alt="">
+      <div class="content-container">
+          <div class="content">
+            <h2>Capture and Share the World's Moments</h2>
+            <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <div class="button-container">
+              <img src="images/badge-iphone.png" alt="">
+              <img src="images/badge-android.png" class="android" alt="">
+            </div>
+          </div>
+      </div>
+  </div>
+  <footer>
+    <div class="links">
+    <a href="#">About Us</a>
+    <a href="#">Support</a>
+    <a href="#">Blog</a>
+    <a href="#">Press</a>
+    <a href="#">API</a>
+    <a href="#">Jobs</a>
+    <a href="#">Privacy</a>
+    <a href="#">Terms</a>
+    &copy; 2014 Instagram 
+    </div>
+  </footer>
 </body>
 </html>
