"Improved gradient of Log in button"

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -12,7 +12,7 @@
   <div class="brandLogoLogin">
     <img  src="images/brand.png" alt="">
     <button class="loginButton">
-      <img src="images/home.png" alt="Home button for Login"> Login
+      <img class="home" src="images/home.png" alt="Home button for Login"> Log in
     </button>
   </div>
 </section>
