--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,59 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="blue-half">
+    <img src="images/brand.png" alt="Instagram logo" class="logo">
+    <button class="login gradient-bnt"> 
+      <img src="images/home.png" alt="login home" >
+      <span>Log in </span>
+    </button>
 
-  Capture and Share the World's Moments
+  </div>
+  <div class="white-half">
+    <img src="images/phones.png" alt="big phone picture" class="big-phone">
+    <section class="info">
+      <h1>
+        Capture and Share 
+        the World's Moments
+      </h1>
+      <p>
+        Instagram is a <strong>fast, beautiful</strong>  and 
+        <strong>fun</strong> way to share your life with friends and family.
+      </p>
+      <p>
+        Take a picture or video, choose a filter to 
+        transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      </p>
+      <p>
+        Oh yeah, did we mention it's free?
+      </p>
+      <img src="images/badge-iphone.png" alt=" Download on the App Store">
+      <img src="images/badge-android.png" alt="Get it on Google Play">
+    </section>
+  
+    
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  </div>
+  <footer>
+    <a href="" >About Us</a>
+    <a href="" >Support</a>
+    <a href="" >Blog</a>
+    <a href="" >Press</a>
+    <a href="" >API</a>
+    <a href="" >Jobs</a>
+    <a href="" >Privacy</a>
+    <a href="" >Terms</a>
+    
+    <span class="faded">
+      &copy; 2014 Instagram
+    </span>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  </footer>
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
