--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,52 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <header></header>
 
-  Capture and Share the World's Moments
+  <div class="main-container">
+    <div class="phones-container">
+      <img src="images/phones.png">
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="ig-info-container">
+      <div class="ig-title">
+        <img src="images/brand.png">
+        <button>
+          <img src="images/home.png">
+          Log in
+        </button>
+      </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <div class="ig-text-container">
+        <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram -- it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <div>
+          <img src="images/badge-iphone.png">
+          <img class="android-img-store" src="images/badge-android.png">
+        </div>
+      </div>
+    </div>
+  </div>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer>
+    <nav>
+      <ul>
+        <li>ABOUT US</li>
+        <li>SUPPORT</li>
+        <li>BLOG</li>
+        <li>PRESS</li>
+        <li>API</li>
+        <li>JOBS</li>
+        <li>PRIVACY</li>
+        <li>TERMS</li>
+        <li class="copyright-li">&copy; 2014 Instagram</li>
+      </ul>
+    </nav>
+  </footer>
 </body>
 </html>
