--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+	<head>
+		<title>Instagram</title>
+		<link rel="stylesheet" href="./css/main.css" />
+	</head>
+	<body>
+		<div>
+			<div class="top-div">
+				<div class="top-div-nav">
+					<img
+						class="top-div-nav-element logo"
+						src="./images/brand.png"
+						alt=""
+					/>
+					<button class="log-button top-div-nav-element">
+						<img src="./images/home.png" alt="" />Log in
+					</button>
+				</div>
+			</div>
+			<div class="bottom-content">
+				<div class="phones">
+					<img src="./images/phones.png" alt="" />
+				</div>
+				<div class="description">
+					<div>
+						<h2>Capture and Share the World's Moments</h2>
+						<div>
+							<p>
+								Instagram is a fast, beautiful and fun way to share your life
+								with friends and family.
+							</p>
+							<p>
+								Take a picture or video, choose a filter to transform its look
+								and feel, then post to Instagram &mdash; it's that easy. You can
+								even share to Facebook, Twitter, Tumblr and more. It's a new way
+								to see the world.
+							</p>
+							<p>
+								Oh yeah, did we mention it's free?
+							</p>
+						</div>
+					</div>
+					<div class="stores">
+						<div class="app-store">
+							<img src="./images/badge-iphone.png" alt="" />
+						</div>
+						<div class="google-play-store">
+							<img src="./images/badge-android.png" alt="" />
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<footer class="footer">
+			<ul class="footer-nav">
+				<li class="footer-nav-item">About Us</li>
+				<li class="footer-nav-item">Support</li>
+				<li class="footer-nav-item">Blog</li>
+				<li class="footer-nav-item">Press</li>
+				<li class="footer-nav-item">API</li>
+				<li class="footer-nav-item">Jobs</li>
+				<li class="footer-nav-item">Privacy</li>
+				<li class="footer-nav-item">Terms</li>
+				<li class="footer-nav-item copyright">&copy; 2014 Instagram</li>
+			</ul>
+		</footer>
+	</body>
 </html>
