--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class='container'>
+    <div class='wrapper'>
+      <div class="left-side">
+        <img src="images/phones.png" alt="mobile phones">
+      </div>
+      <div class="right-side">
+        <div class="title-head">
+          <img src="images/brand.png" alt="Instagram logo">
+          <button>Log in</button>
+        </div>
+        <div class="text-body">
+          <h1 class="header-title">Capture and Share <br> the World's Moments</h1>
+          <p>
+            Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          </p>
+          <p>
+            ake a picture or video, choose a filter to transform its look and feel, 
+            then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, 
+            Tumblr and more. It's a new way to see the world.
+          </p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+        <div class="mobile-app">
+          <ul>
+            <li>
+              <img src="images/badge-iphone.png" alt="get the iPhone app">
+              <p>Download on the App Store</p>
+            </li>
+            <li>
+              <img src="images/badge-iphone.png" alt="get the iPhone app">
+              <p>Download on the App Store</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <footer>
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li><a href="#">&copy; 2014 Instagram</a></li>
+        </ul>
+      </footer>
+    </div>
+  </div>
 </body>
 </html>
