This is my first instagram clone

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Instagram</title>
+  <title>[Clone]Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class="bg-container">
+  </div>
 
-  Capture and Share the World's Moments
+  <div class="double-column">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="cellphone">
+      <img src="./images/phones.png" alt="Those phones">
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="content">
+      <div class="logo-login">
 
-  Oh yeah, did we mention it's free?
+        <div class="logo">
+          <img src="./images/brand.png" alt="the logotype">
+        </div>
 
-  Download on the App Store
-  Get it on Google Play
+        <div class="login">
+          <img src="./images/home.png" alt="U can make your login here!">
+          <span class="login-text">
+            <h4>Log in</h4></span>
+        </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      </div>
+      <div class="about-app">
+        <h1>Capture and Share<br> the World's Moments</h1>
 
-  &copy; 2014 Instagram
+        <p>
+          Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br><br>
+
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <br><br>
+          Oh yeah, did we mention it's free?
+        </p>
+
+        <div class="downloads">
+          <img src="./images/badge-iphone.png" alt="">
+          <img src="./images/badge-android.png" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="footer">
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>API</li>
+      <li class="superli">Terms&copy; 2019 Fred Conti</li>
+    </ul>
+  </div>
+
 </body>
+
 </html>
