--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,43 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <header>
+      <div class="header-content">
+        <img src="../starter-code/images/brand.png" alt="">
+        <button><img id="home-icon" src="../starter-code/images/home.png" alt=""> <span class="login-button-text">Log in</span></button> 
+      </div>
+  </header>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="section">
+    <img class="iphone-img" src="../starter-code/images/phones.png" alt="">
+    <div class="tile">
+        <img src="../starter-code/images/frame.png" alt=""> 
+        <h2 class="tile-content"> Capture and Share the World's Moments</h2>
+        <p class="tile-content">Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p class="tile-content">Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p class="tile-content">Oh yeah, did we mention it's free?</p>
+        <img class="tile-content" src="images/badge-iphone.png" alt="">
+        <img class="tile-content" src="images/badge-android.png" alt="">
+    </img>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  </div>
+    
+    <div class="footer">
+      <a href="#">About Us</a>
+      <a href="#">Support</a>
+      <a href="#">Blog</a>
+      <a href="#">Press</a>
+      <a href="#">API</a>
+      <a href="#">Jobs</a>
+      <a href="#">Privacy</a>
+      <a href="#">Terms</a>
+      <span id="copyright">&copy; 2014 Instagram</span>
+    </div>
+  
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
