--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <meta charset="UTL-8">
+  <link rel="stylesheet" href="./css/main.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+
 <body>
-  Instagram
+  <div class="container">
+    <div class="phone">
+      <img id="phone-pic" src="./images/phones.png" alt="Phone with Instagram">
+    </div>
+    <div class="left-content">
+      <div class="top-icons">
+        <img id="logo" src="./images/brand.png" alt="Instagram logo">
+        <div class="login">
+          <button>
+            <img src="./images/home.png" alt="Home icon">
+            <p><a href="#">
+                <stron>Log in</stron>
+              </a></p>
+          </button>
+        </div>
+      </div>
+      <div class="text">
+        <h1>Capture and Share<br> the World's Moments</h1>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your
+          life<br> with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look<br> and feel, then post to Instagram &mdash;
+          it's
+          that easy. You can<br> even share to Facebook, Twitter, Tumblr and more. It's a<br> new way to see the
+          world.
+        </p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+      <div class="bottom-icons">
+        <img src="./images/badge-iphone.png" alt="Download on the App Store">
+        <img src="./images/badge-android.png" alt="Get it on Google Play">
+      </div>
+    </div>
+  </div>
+  <footer>
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+    </ul>
+    <p class="copyright">&copy; 2014 Instagram</p>
+  </footer>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
+
 </html>
