--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,57 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/ig.min.css">
 </head>
 <body>
-  Instagram
+  <main>
+    <div class="blue-section"></div>
+    <div class="white-section">
+      <div class="content">
+        <div class="left">
+          <img src="images/phones.png" alt="" class="phone">
+        </div>
+        <div class="right">
+          <div class="top-frame">
+            <img src="images/brand.png" alt="" class="logo">
+            <button class="login">
+              <img src="images/home.png" alt="">
+              Log in
+            </button>
+          </div>
+          <div class="text">
+            <h1>Capture and Share <br> the World's Moments</h1>
+            <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+            <br>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <br>
+            <p>Oh yeah, did we mention it's free?</p>
+            </div>
+            <div class="buttons">
+              <a href="#">
+                <img src="images/badge-iphone.png" alt="">
+              </a>
+              <a href="#">
+                <img src="images/badge-android.png" alt="">
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <footer>
+        <span>ABOUT US</span>
+        <span>SUPPORT</span>
+        <span>BLOG</span>
+        <span>PRESS</span>
+        <span>API</span>
+        <span>JOBS</span>
+        <span>PRIVACY</span>
+        <span>TERMS</span>
+        <span class="except">&copy; 2014 INSTAGRAM</span>
+      </footer>
+    </main>
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
-</html>
+  </body>
+  </html>
