finished ig clone

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,39 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="blue-background">
+    <img class="phones" src="images/phones.png" alt="two phones">
+    <img class="instagram-logo" src="images/brand.png" alt="instagram logo">
+    <a class="login-btn" href="#"><img src="images/home.png" alt="home icon">Log in</a>
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="white-background">
+    <div class="block">
+        <h1>Capture and Share<br> the World's Moments</h1>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family. <br><br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br><br>Oh yeah, did we mention it's free?</p>
+        <img class="download-btn" src="images/badge-iphone.png" alt="download button-iPhone">
+        <img class="download-btn" src="images/badge-android.png" alt="download button-Android">
+    </div>
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+  <footer>
+    <a href="#">ABOUT US</a>
+    <a href="#">SUPPORT</a>
+    <a href="#">BLOG</a>
+    <a href="#">PRESS</a>
+    <a href="#">API</a>
+    <a href="#">JOBS</a>
+    <a href="#">PRIVACY</a>
+    <a href="#">TERMS</a>
+    <p>&copy; 2014 INSTAGRAM</p>
+  </footer>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
