--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,54 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
-
+  <div class="top">
+    <img class="logo" src="./images/brand.png" alt="Instagram's logo">
+    <div class="log-in">
+      <button>
+      <img src="images/home.png" alt="homo logo">
+      Log in
+    </button>
+    </div>
+</div>
+<div>
+<div class="two-phones">
+  <img src="images/phones.png" alt="phones with the app">
+</div>
+<div class="description">
+  <h2>
   Capture and Share the World's Moments
+    </h2>
+  
+  <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p>Oh yeah, did we mention it's free?</p>
+</div>
+<div class="iphone">
+  <img src="images/badge-iphone.png" alt="download on iphone">
+</div>
+<div class="android">
+  <img src="images/badge-android.png" alt="download on android">
+</div>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+</div>
+<div class="foot">
+<footer class="options">
+  <a href="#">About Us</a>
+  <a href="#">Support</a>
+  <a href="#">Blog</a>
+  <a href="#">Press</a>
+  <a href="#">API</a>
+  <a href="#">Jobs</a>
+  <a href="#">Privacy</a>
+  <a href="#">Terms</a>
 
   &copy; 2014 Instagram
+</footer>
+</div>
 </body>
 </html>
