--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,48 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div class="container">
+ <div class="wrapper">
+    <div class="left">
+        <img src="./images/phones.png" alt="phones">
+      </div>
+      <div class="right">
+        <div class="header">
+          <img src="./images/brand.png" alt="brand">
+          <button class="log-in"><img src="./images/home.png" width="30" height="30" alt="home"/>Log In</button>
+        </div>
+        <div class="main">
+          <h1 class="description-title">Capture and Share the World's Moments</h1>
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> 
+            way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's 
+            that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        
+          <img src="./images/badge-iphone.png" alt="Apple app store">
+          <img src="./images/badge-android.png" alt="Androis app store">
+        </div>
+      </div>
+      <div class="bottom">
+        <ul>
+          <li>Blog</li>
+          <li>Support</li>
+          <li>About Us</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li>&copy; 2014 Instagram</li>
+        </ul>
+      </div>
+ </div>
+</div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
