--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="header"></div>
+  <div class="brand">
+  <img src="./images/brand.png" alt="Instagram"></div>
 
-  Capture and Share the World's Moments
+  <button class="bttn" type="submit">
+    <img src="./images/home.png" alt="house" class="searchimg"> Log in
+  </button>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="phone">
+    <img src="./images/phones.png">
+  </div>
+ 
+  
+ 
+  <div class="frame">
+  <h1 id="capture">Capture and Share the World's Moments</h1>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <p>Oh yeah, did we mention it's free?</p>
+  <div class="line">
+   
+      <a href="iphone.html"><img src="./images/badge-iphone.png"></a>
+    
+      <a href="android.html"><img src="./images/badge-android.png"></a>
+  </div>
+  
+</div>
+<div class="links">
+  <a href="about.html">About Us</a>  
+  <a href="support.html">Support</a>  
+ <a href="blog.html">Blog</a>  
+  <a href="press.html">Press</a>  
+  <a href="api.html">API</a>  
+  <a href="jobs.html">Jobs</a>  
+  <a href="privacy.html">Privacy</a>  
+  <a href="terms.html">Terms</a> 
 
   &copy; 2014 Instagram
+</div>
 </body>
 </html>
