--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,44 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+  <title>Instagram Clone</title>
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
-<div class="container">
-<div class="phones">
- <img src="images/phones.png" alt="phones">
-</div>
+<section class="container">
+  <figure class="phones">
+    <img src="images/phones.png" alt="phones">
+  </figure>
 
-<section class="column2">
-  <div class="icon-top">
-    <img src="images/brand.png" alt="instagram icon">
-    <div class="button">
-    <button>
-     <img src="images/home.png" alt="home">Log in
-   </button>
-  </div>
-   </div>
-  
-  <div class="instruction">
-    <div class="text-instruction">
-      <h1> Capture and Share the World's Moments</h1>
-      <p>  Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
-      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
-      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-      <p>Oh yeah, did we mention it's free?</p>
-      <div class="icon-bottom">
-      <img src="images/badge-iphone.png" alt="iphone">
-      <img src="images/badge-android.png" alt="android">
+  <section class="column2">
+    <nav class="nav-bar">
+      <img src="images/brand.png" alt="instagram icon">
+      <div>
+        <button class="button-container">
+          <img src="images/home.png" alt="home">
+          <h2>Log in</h2>
+        </button>
+      </div>
+    </nav>
+      
+    <div class="instruction">
+      <div class="text-instruction">
+        <h1> Capture and Share the World's Moments</h1>
+        <p>  Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <div class="icon-bottom">
+          <img src="images/badge-iphone.png" alt="iphone">
+          <img src="images/badge-android.png" alt="android">
+        </div>
+      </div>
     </div>
-    </div>
-  </div>
+    
+  </section>
 </section>
-</div>
 
   <footer>
-    <ul>
       <a>About Us</a>
       <a>Support</a>
       <a>Blog</a>
@@ -47,10 +48,8 @@
       <a>Jobs</a>
       <a>Privacy</a>
       <a>Terms</a>
-     <a class="not-a-link">&copy; 2014 Instagram<a>
-    </ul>
+      <a class="not-a-link">&copy; 2014 Instagram<a>
   </footer>
-
 
 </body>
 </html>
