--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -9,11 +9,11 @@
 <div class="container">
  <div class="wrapper">
     <div class="left">
-        <img src="./images/phones.png" alt="phones">
+        <img class="phones" src="./images/phones.png" alt="phones">
       </div>
       <div class="right">
         <div class="header">
-          <img src="./images/brand.png" alt="brand">
+          <img class="instalogo" src="./images/brand.png" alt="brand">
           <button class="log-in"><img src="./images/home.png" width="30" height="30" alt="home"/>Log In</button>
         </div>
         <div class="main">
@@ -24,12 +24,12 @@
             that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
           <p>Oh yeah, did we mention it's free?</p>
         
-          <img src="./images/badge-iphone.png" alt="Apple app store">
+          <img class="app-store" src="./images/badge-iphone.png" alt="Apple app store">
           <img src="./images/badge-android.png" alt="Androis app store">
         </div>
       </div>
       <div class="bottom">
-        <ul>
+        <ul class="bottom-links">
           <li>Blog</li>
           <li>Support</li>
           <li>About Us</li>
@@ -38,7 +38,7 @@
           <li>Jobs</li>
           <li>Privacy</li>
           <li>Terms</li>
-          <li>&copy; 2014 Instagram</li>
+          <li id="copyright">&copy; 2014 Instagram</li>
         </ul>
       </div>
  </div>
