--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
+
 </head>
+
 <body>
-  Instagram
+  <div id="background"></div>
+  <section>
+    <div class="section1">
+      <div id="phone">
+        <img src="images/phones.png" alt="">
+      </div>
 
-  Capture and Share the World's Moments
+      <div id="informacoes">
+        <div id="logo">
+          <img id="brand" src="images/brand.png" alt="">
+          <button><img src="images/home.png" alt=""> log in</button>
+        </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <div id="title1">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+            it's
+            that
+            easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div id="images1">
+            <img src="images/badge-iphone.png" alt="">
+            <img src="images/badge-android.png" alt="">
+          </div>
+        </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+      </div>
 
-  Download on the App Store
-  Get it on Google Play
+    </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  </section>
 
-  &copy; 2014 Instagram
+  <footer>
+    <ul>
+      <li><a href="">About Us</a></li>
+      <li><a href="">Support</a></li>
+      <li><a href="">Blog</a></li>
+      <li><a href="">Press</a></li>
+      <li><a href="">API</a></li>
+      <li><a href="">Jobs</a></li>
+      <li><a href="">Privacy</a></li>
+      <li><a href="">Terms</a></li>
+      <li><a id="footer-gray" href="">&copy; 2014 Instagram</a></li>
+    </ul>
+  </footer>
+
 </body>
+
+
 </html>
