--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,11 +2,20 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div class="top-banner">
+<div class="brand-title"><img src="images/brand.png" alt="brand">
+</div>
+<button class="button"><img src="images/home.png" alt="home-Button"> Log In</button>
+</div>
+
+<div class="section-content">
+<section class="main-content">
+  <div class="text-content">
+    <h4 class="title-content">Capture and Share the World's Moments</h4>
 
   Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
@@ -14,9 +23,20 @@
 
   Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
+  </div>
+</section>
+</div>
 
+<img class ="phones" src="images/phones.png" alt="phones">
+
+
+<div class ="apps">
+<img src="images/badge-iphone.png" alt="Download on the App Store">
+<img src="images/badge-android.png" alt="Get it on Google Play">
+</div>
+
+<footer class="total-foot">
+<div class="foot">
   About Us
   Support
   Blog
@@ -25,7 +45,9 @@
   Jobs
   Privacy
   Terms
-
-  &copy; 2014 Instagram
+  <span class="foot-two">&copy; 2014 Instagram</span>
+</div>
+  
+  </footer>
 </body>
 </html>
