--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="/starter-code/css/main.css" />
+  </head>
+  <!-- BACKGROUND -->
+  <body>
+    <div class="background-blue"></div>
+    <div id="main-container">
+      <img class="phone" src="/starter-code/images/phones.png" alt="phones" />
+      <!-- IG LOGO AND LOGIN -->
+      <div class="right-side">
+        <div id="instagram-logo-login">
+          <img
+            class="img"
+            src="/starter-code/images/brand.png"
+            alt="Instagram"
+          />
+          <button type="button" class="button">
+            <img src="/starter-code/images/home.png" alt="home" />
+            Log in
+          </button>
+        </div>
+        <!-- INFO -->
+        <div class="info">
+          <h2>
+            Capture and Share<br />
+            the World's Moments
+          </h2>
+          <p>
+            Instagram is a
+            <span style="font-weight: bold;">fast, beautiful</span> and
+            <span style="font-weight: bold;">fun</span> way to share your life
+            with friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world. 
+            <p>Oh yeah, did we mention it's free?</p>
+          </p>
+          <div>
+            <img src="/starter-code/images/badge-iphone.png" alt="apple" />
+            <img src="/starter-code/images/badge-android.png" alt="android" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- FOOTER -->
+    <div class="footer">
+      <p>About</p>
+      <p>Us</p>
+      <p>Support</p>
+      <p>Blog</p> 
+      <p>2014 Instagram</p>
+    </div>
+  </body>
 </html>
