--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-  Instagram
+  <header></header>
+  <div class="thebox"> 
+    <div class="phones"> 
+      <img src="images/phones.png" alt="Phones"/> 
+    </div>
 
-  Capture and Share the World's Moments
+    <div class="totheright">
+      <div class="instagram-login">
+        <img class="logo" src="images/brand.png" alt="Instagram"/>
+        <section class="home-login">
+          <img class="home" src="images/home.png" alt="Home"/>
+          <p class="login">Log in</p>
+        </section>
+      </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div class="capture-moments">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <div class="get-buttons">
+          <section class="get-app">
+            <img src="images/badge-iphone.png" alt="Download on the App Store"/>
+          </section>
+          <section class="get-play">
+            <img src="images/badge-android.png" alt="Get it on Google Play"/>
+          </section>
+        </div>
+      </div>
+    </div>
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer>
+    <nav>
+      <ul>
+        <li>  About Us  </li>
+        <li>  Support</li>
+        <li>  Blog</li>
+        <li>  Press</li>
+        <li>  API</li>
+        <li>  Jobs</li>
+        <li>  Privacy</li>
+        <li>  Terms</li>
+        <li>  &copy; 2014 Instagram</li>
+      </ul>
+    </nav>
+  </footer>
 </body>
 </html>
