--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+  <header class="header">
+      <img src="images/brand.png" alt="instagram logo" class="instagramLogo">
+      <button class="logIn">
+          <img src="images/home.png" alt="log in" class="houseIcon">
+          <p class="login">Log In</p>
+      </button>
+     
+  </header>
+  <div class="wholeBlock">
+    <div class="PhotoIphones">
+      <img src="images/phones.png">
+    </div>
+     <div class="frameImage">
+      <div class="Square">
+        <h1>Capture and Share<br> the World's Moments</h1>
 
-  Capture and Share the World's Moments
+        <p>Instagram is a fast, beautiful and fun way to share your<br> life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>Take a picture or video, choose a filter to transform its look <br>and feel, then post to Instagram &mdash; it's
+          that
+          easy.<br> You can even share to Facebook, Twitter, Tumblr and more. <br>It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+    </div>
+    </div>
+  
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Support</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+     <li> &copy; 2014 Instagram</li>
+    </ul>
+    
+  </footer>
 </body>
+
 </html>
