--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,10 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class="blue-background">
+  </div>
+<div class="main-fix">
+  <div class="main">
+    <div class="main-left">
+      <img class="phones" src="images/phones.png" alt="phones picture" />
+    </div>
+      <div class="main-right">
+        <div class="instagram">
+          <img class="instagram-logo" src="images/brand.png" alt="Instagram logo" />
+          <button class="log-in" href="#">
+          <p>
+          <img src="images/home.png" alt="home icon"> Log in
+          </p>
+          </button>
+        </div>
+        <div class="capture">
+          <h1>Capture and Share<br />the World's Moments</h1>
+          <br>
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+          <br>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+              </p>
+              <br>
+              <p>Oh yeah, did we mention it's free?</p>
+              <br>
+              <br>
+              <p>
+                <img class="apple" src="images/badge-iphone.png" alt="apple store icon">
+                <img src="images/badge-android.png" alt="google store icon">
+              </p>
+         </div>
+    </div>
+  </div>
+</div>
+<footer>
+  <nav>
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li class="copyright">&copy; 2014 INSTAGRAM</li>
+    </ul>
+  </nav>
+</footer>
+
+
+
+  <!-- Instagram
 
   Capture and Share the World's Moments
 
@@ -24,8 +80,9 @@
   API
   Jobs
   Privacy
-  Terms
+  Terms -->
 
-  &copy; 2014 Instagram
+  <!-- &copy; 2014 Instagram -->
 </body>
+
 </html>
