--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <meta content="width=device-width, initial-scale=1.0, maximum-scale=2.0, minimum-scale=1.0, user-scalable=1" name="viewport">
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="container">
+    <div class="item">
+      <img src="./images/phones.png" alt="">
+    </div>
+    <div class="item right">
+      <div class="header">
+        <img class="banner" src="./images/brand.png" alt="">
+        <button class="btn"> <img src="./images/home.png" alt=""> Log in</button>
+      </div>
+      <div class="card">
+        <div class="title">Capture and Share<br />
+          the World's Moments</div>
+        <div class="content">
+            <p> Instagram is a fast, beautiful and fun way to share your life with friends and family.
+            </p>
+            <p>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <p>
+            Oh yeah, did we mention it's free?
+          </p>
+        </div>
+        
+      </div>
+      <div class="app">
+          <img src="./images/badge-iphone.png" alt="">
+          <img src="./images/badge-android.png" alt="">
+        </div>
+    </div>
+  </div>
+<footer>
+  <ul>
+    
+  <li><a href="#">About Us</a></li>
+  <li><a href="#">Support</a></li>
+  <li><a href="#">Blog</a></li>
+  <li><a href="#">Press</a></li>
+  <li><a href="#">API</a></li>
+  <li><a href="#">Jobs</a></li>
+  <li><a href="#">Privacy</a></li>
+  <li><a href="#">Terms</a></li>
 
-  Capture and Share the World's Moments
+  <li>&copy; 2014 Instagram</li>
+  </ul>
+</footer>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
 </body>
 </html>
