--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="background-blue"></div>
+  <section id="margin-page">
+    <div id="image">
+    <img src="./images/phones.png" alt="Phone">
+    </div>
+    <section id="all-content">
+        <header id="link-button">
+          <h1> <img class="logo-instagram"src="./images/brand.png" alt="Instagram Logo"></h1>
+          <button> <img src="./images/home.png" alt="home button"> Log in</button>
+        </header>
+        <article id="instagram-description">
+        <h2>Capture and Share<br>the World's Moments</h2>
 
-  Capture and Share the World's Moments
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram 
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way 
+          to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+        <p>Oh yeah, did we mention it's free?</p>
+        </article>
+      <div id="app-links">
+        <a href="#"><img src="./images/badge-iphone.png" alt="Download on the App Store"></a> 
+        <a href="#"><img src="./images/badge-android.png" alt="Get it on Google Play"></a>
+      </div>
+    </section>
+  </section>
+  <footer>
+      <nav id="footer-nav">
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li><p id="copyright">&copy; 2014 Instagram</p></li>
+        </ul>
+      </nav> 
+    </footer>
 </body>
 </html>
