--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,50 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <header></header>
+  <div class="container">
+    <!-- LEFT STUFF STARTS HERE -->
+    <div class="phones">
+      <img src="images/phones.png" alt="phones">
+    </div>
+    <!-- LEFT STUFF ENDS HERE -->
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <!-- RIGHT STUFF STARTS HERE -->
+    <div class="rightside">
+      <div class="branding">
+        <img src="images/brand.png" alt="Instagram">
+        <a class="button"><img src="images/home.png" alt="Log in">Log in</a>
+      </div>
+      <div class="content">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+      <div class="download">
+        <img src="images/badge-iphone.png" alt="Download on the App Store">
+        <img src="images/badge-android.png" alt="Get it on Google Play">
+      </div>  
+    </div>
+  <!-- RIGHT STUFF ENDS HERE -->
+  </div> 
+  <!-- FOOTER STUFF STARTS HERE -->
+  <footer class="footer-links">
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li><copyright>&copy; 2014 Instagram</copyright></li>
+    </ul>
+  </footer>
+  <!-- FOOTER STUFF ENDS HERE -->
 </body>
 </html>
