lab-instagram-clone

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,46 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="main">
+    <img class="brand" src="./images/brand.png" alt="instagram logo img">
+  </div>
+  <div class="div-home-button">
+    <img class="home" src="./images/home.png" alt="home img">
+    <button>Log in</button>
+  </div>
 
-  Capture and Share the World's Moments
+  <div class="content">
+    <img class="phones" src="./images/phones.png" alt="instagram logo img">
+    <div class="frame-div">
+  <div class="text-frame">
+      <!-- <img class="frame" src="./images/frame.png" alt="home img"> -->
+    <h3>Capture and Share the World's Moments</h3>
+    <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+    <p>Oh yeah, did we mention it's free?</p>
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    </div>
+  </div>
+  <table class="table-nav">
+    <tr>
+      <td>About Us</td>
+      <td>Support</td>
+      <td>Blog</td>
+      <td>Press</td>
+      <td>API</td>
+      <td>Jobs</td>
+      <td>Privacy</td>
+      <td>Terms</td>
+      <td class="clear">&copy; 2014 Instagram</td>
+    </tr>
+  </table> 
+  <div class="ios-android-container">
+    <img src="images/badge-iphone.png" alt="badge-iphone-img">
+    <img class="badge-iphone" src="images/badge-android.png" alt="badge-android-img">
+  </div>
 </body>
 </html>
