--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,53 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <section class="section">
+  
+    <div>
+      <img src="./images/phones.png" alt="phone image">
+    </div>
+    
+    <div>
 
-  Capture and Share the World's Moments
+      <div class="button">
+        <img src="./images/brand.png" alt="instagram logo">
+        <button type="button"><img src="./images/home.png" >Log in</button>
+    
+      </div>
+      <div class="background-div">
+        <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <div class="icone-app">
+        <img src="./images/badge-android.png" alt="android">
+        <img src="./images/badge-iphone.png" alt="iphone">
+      </div>
 
-  Oh yeah, did we mention it's free?
+    </div>
+  
+  </section>
+  <footer class="rodape">
+    <a href="">About Us</a>
+    <a href="">Support</a>
+    <a href="">Blog</a>
+    <a href="">Press</a>
+    <a href="">API</a>
+    <a href="">Jobs</a>
+    <a href="">Privacy</a>
+    <a href="">Terms</a>
+    &copy; 2014 Instagram
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  </footer>
 
-  &copy; 2014 Instagram
+
+  
 </body>
 </html>
