--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,42 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">  
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div id="main">
+  <section>
+      <div class="cell"></div>
+  </section>
+  <section>
+    <div id="content">
+      <div id="logo">
+        <img src="images/brand.png" alt="Instagram Logo">
+        <input type="button" alt="Log in" src="images/home.png" value="Log in">
+      </div>
+      <div id="background-text">
+        <h2>Capture and Share</h2>
+        <h2>the World's Moments</h2>        
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <img src="images/badge-iphone.png" alt="Logo APP Store">
+        <img src="images/badge-android.png" alt="Logo Google Play">        
+      </div>
+    
+    </div>
+    </section>
+  </div>
+    <footer>
+        <a href="#">About Us</a>
+        <a href="#">Support</a>
+        <a href="#">Blog</a>
+        <a href="#">Press</a>
+        <a href="#">API</a>
+        <a href="#">Jobs</a>
+        <a href="#">Privacy</a>
+        <a href="#">Terms</a>
+        <p>&copy; 2014 Instagram</p>
+    </footer>
 </body>
 </html>
