--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <section id="instagram-all">
+    <div class="container">
+      <div class="phone"><img src="./images/phones.png"></div>
+      <div class="login-content-apps">
+        <div class="login">
+          <img src="./images/brand.png" alt="Instagram">
+          <button name="login">Log in</button>
+        </div>
+        <div class="content">
+          <h1>
+            Capture and Share<br>
+            the World's Moments
+          </h1>
+          <p>
+            Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your
+            life<br>
+            with friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look<br>
+            and feel, then post to Instagram &mdash; it's that easy. You can<br>
+            even share to Facebook, Twitter, Tumblr and more. It's a<br>
+            new way to see the world.
+          </p>
+          <p>
+            Oh yeah, did we mention it's free?
+          </p>
+        </div>
+        <div class="apps">
+          <img src="./images/badge-iphone.png" alt="Download on the App Store">
+          <img src="./images/badge-android.png" alt="Get it on Google Play">
+        </div>
+      </div>
+    </div>
+    <div class="clearfix"></div>
+  </section>
+  <footer>
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li id="instagram-footer">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
+
 </html>
